--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ganache-time-traveler": "^1.0.15",
     "solidity-coverage": "^0.7.19",
     "truffle": "^5.5.12",
-    "truffle-assertions": "^0.9.2"
+    "truffle-assertions": "^0.9.2",
+    "bignumber.js": "^9.0.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
